--- a/plugins/chat/assets/javascripts/discourse/components/styleguide/organisms/chat.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/styleguide/organisms/chat.hbs
@@ -3,3 +3,4 @@
 <Styleguide::ChatThreadListItem />
 <Styleguide::ChatComposerMessageDetails />
 <Styleguide::ChatHeaderIcon />
+<Styleguide::ChatMessageMentionWarning />
