--- a/plugins/chat/assets/stylesheets/common/index.scss
+++ b/plugins/chat/assets/stylesheets/common/index.scss
@@ -58,3 +58,5 @@
 @import "chat-thread-unread-indicator";
 @import "chat-thread-participants";
 @import "channel-summary-modal";
+@import "chat-message-mention-warning";
+@import "chat-message-error";
