--- a/app/assets/stylesheets/common/components/sidebar-categories-form.scss
+++ b/app/assets/stylesheets/common/components/sidebar-categories-form.scss
@@ -4,13 +4,43 @@
   }
 }
 
+.sidebar-categories-form__modal-footer.modal-footer {
+  .sidebar-categories-form__reset-to-defaults-btn {
+    margin-left: auto;
+    margin-right: 0em;
+
+    .d-icon {
+      font-size: var(--font-down-1);
+      color: var(--tertiary);
+    }
+
+    &:focus,
+    &:active {
+      background: none;
+    }
+  }
+}
+
+.sidebar-categories-form__deselect {
+  margin: 0;
+
+  .btn-flat.sidebar-categories-form__deselect-all-btn {
+    margin-left: auto;
+    padding: 0;
+
+    &:focus,
+    &:active {
+      background: none;
+    }
+  }
+}
+
 .sidebar-categories-form {
   .sidebar-categories-form__filter {
     display: flex;
     flex-direction: row;
     margin-right: auto;
     width: 100%;
-    margin-bottom: 1em;
     position: relative;
   }
 
