UX: Remove horizontal scroll on mobile for edit categories nav modal (#22197)
What does this commit do?

Prior to this change, a long category name on mobile would cause a
horizontal scroll to appear because the category name was overflowing
its element. This commit changes it such that the category name will
wrap around instead.

--- a/app/assets/stylesheets/common/components/sidebar-categories-form.scss
+++ b/app/assets/stylesheets/common/components/sidebar-categories-form.scss
@@ -111,6 +111,11 @@
   }
 
   .sidebar-categories-form__category-badge {
+    .badge-category {
+      white-space: normal;
+      word-wrap: break-word;
+    }
+
     .category-name {
       color: var(--primary);
       font-size: var(--font-up-1);
