--- a/app/assets/javascripts/discourse/app/components/sidebar/common/custom-section.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/common/custom-section.hbs
@@ -17,11 +17,15 @@
         @prefixValue={{link.prefixValue}}
         @href={{link.value}}
         @class={{link.linkDragCss}}
-        {{draggable
-          didStartDrag=link.didStartDrag
-          didEndDrag=link.didEndDrag
-          dragMove=link.dragMove
-        }}
+        {{(if
+          this.section.reorderable
+          (modifier
+            "draggable"
+            didStartDrag=link.didStartDrag
+            didEndDrag=link.didEndDrag
+            dragMove=link.dragMove
+          )
+        )}}
       />
     {{else}}
       <Sidebar::SectionLink
@@ -43,7 +47,7 @@
         @currentWhen={{link.currentWhen}}
         @class={{link.linkDragCss}}
         {{(if
-          link.didStartDrag
+          this.section.reorderable
           (modifier
             "draggable"
             didStartDrag=link.didStartDrag
