FEATURE: Scroll to first message when clicking date in chat (#21926)
This PR adds a new parameter to fetch chat messages: `target_date`.

It can be used to fetch messages by a specific date string. Note that it does not need to be the `created_at` date of an existing message, it can be any date. Similar to `target_message_id`, it retrieves an array of past and future messages following the query limits.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-channel.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-channel.hbs
@@ -36,12 +36,12 @@
       class="chat-messages-container"
       {{chat/on-resize this.didResizePane (hash delay=100 immediate=true)}}
     >
-
       {{#if this.loadedOnce}}
         {{#each @channel.messages key="id" as |message|}}
           <ChatMessage
             @message={{message}}
             @resendStagedMessage={{this.resendStagedMessage}}
+            @fetchMessagesByDate={{this.fetchMessagesByDate}}
             @context="channel"
           />
         {{/each}}
