--- a/plugins/chat/assets/stylesheets/common/chat-message-separator.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-message-separator.scss
@@ -69,6 +69,10 @@
           border-radius: 4px;
           color: var(--primary-800);
           background: var(--primary-50);
+
+          &:hover {
+            border: 1px solid var(--secondary-high);
+          }
         }
 
         .chat-message-separator__last-visit {
@@ -94,6 +98,30 @@
       padding: 0.25rem 0.5rem;
       box-sizing: border-box;
       display: flex;
+      cursor: pointer;
+      pointer-events: all;
+
+      .no-touch & {
+        &:hover {
+          border: 1px solid var(--secondary-high);
+          border-radius: 4px;
+          color: var(--primary-800);
+          background: var(--primary-50);
+        }
+      }
+
+      .touch & {
+        &:active {
+          border: 1px solid var(--secondary-high);
+          border-radius: 4px;
+          color: var(--primary-800);
+          background: var(--primary-50);
+        }
+      }
+
+      &:active {
+        transform: scale(0.98);
+      }
     }
 
     & + .chat-message-separator__line-container {
