FIX: 'in all topics' should search in all topics (#22207)
When searching in the context of a topic the <kbd>in all topics</kbd> link would not search globally for the given term and instead it would always search within the current topic. This PR fixes the link to properly update the search context and search globally for the given term.

This fix reveals some _secretly_ broken tests. Update these as well.

--- a/app/assets/javascripts/discourse/app/components/search-menu/results/initial-options.hbs
+++ b/app/assets/javascripts/discourse/app/components/search-menu/results/initial-options.hbs
@@ -13,6 +13,7 @@
         <SearchMenu::Results::AssistantItem
           @suffix={{i18n "search.in_topics_posts"}}
           @closeSearchMenu={{@closeSearchMenu}}
+          @searchAllTopics={{true}}
           @extraHint={{true}}
           @searchTermChanged={{@searchTermChanged}}
           @suggestionKeyword={{this.contextTypeKeyword}}
