FEATURE: Add modal for editing tags in navigation menu (#22214)
What does this change do?

This change is a first pass for adding a modal used to edit tags that appears in
the navigation menu. As the feature is being worked on in phases, it is
currently hidden behind the `new_edit_sidebar_categories_tags_interface_groups` site setting.

The following features will be worked on in future commits:

1. Input filter to filter through the tgas
2. Button to reset tag selection to default navigation menu tags site
   settings
3. Button to deselect all current selection

--- a/app/assets/javascripts/discourse/app/components/sidebar/categories-form-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/categories-form-modal.hbs
@@ -84,7 +84,7 @@
   <div class="modal-footer sidebar-categories-form__modal-footer">
     <DButton
       @class="btn-primary sidebar-categories-form__save-button"
-      @label="sidebar.categories_form_modal.save"
+      @label="save"
       @disabled={{this.saving}}
       @action={{this.save}}
     />
