--- a/app/assets/stylesheets/common/components/_index.scss
+++ b/app/assets/stylesheets/common/components/_index.scss
@@ -29,6 +29,7 @@
 @import "share-and-invite-modal";
 @import "download-calendar";
 @import "sidebar-categories-form";
+@import "sidebar-tags-form";
 @import "svg";
 @import "tap-tile";
 @import "time-input";
