--- a/app/assets/stylesheets/desktop/components/_index.scss
+++ b/app/assets/stylesheets/desktop/components/_index.scss
@@ -1,4 +1,5 @@
 @import "sidebar-categories-form";
+@import "sidebar-tags-form";
 @import "user-card";
 @import "user-info";
 @import "user-stream-item";
