--- a/app/assets/stylesheets/mobile/components/sidebar-tags-form.scss
+++ b/app/assets/stylesheets/mobile/components/sidebar-tags-form.scss
@@ -1,3 +1,9 @@
+.sidebar-tags-form-modal {
+  .modal-inner-container {
+    width: 35em;
+  }
+}
+
 .sidebar-tags-form {
   .sidebar-tags-form__tag {
     flex-basis: 100%;
