--- a/app/assets/stylesheets/common/components/sidebar-tags-form.scss
+++ b/app/assets/stylesheets/common/components/sidebar-tags-form.scss
@@ -31,4 +31,32 @@
   .sidebar-tags-form__tag-label-count {
     color: var(--primary-medium);
   }
+
+  .sidebar-tags-form__filter {
+    display: flex;
+    flex-direction: row;
+    margin-right: auto;
+    width: 100%;
+    position: relative;
+  }
+
+  .sidebar-tags-form__filter-input-icon {
+    position: absolute;
+    left: 0.5em;
+    top: 0.65em;
+    color: var(--primary-low-mid);
+  }
+
+  .sidebar-tags-form__filter-input-field {
+    border-color: var(--primary-low-mid);
+    padding-left: 1.75em;
+    width: 100%;
+
+    &:focus {
+      border-color: var(--tertiary);
+      outline: none;
+      outline-offset: 0;
+      box-shadow: inset 0px 0px 0px 1px var(--tertiary);
+    }
+  }
 }
