--- a/app/assets/javascripts/discourse/app/components/sidebar/tags-form-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/tags-form-modal.hbs
@@ -15,37 +15,41 @@
       />
     </div>
 
-    {{#if (gt this.filteredTags.length 0)}}
-      {{#each this.filteredTags as |tag|}}
-        <div class="sidebar-tags-form__tag" data-tag-name={{tag.name}}>
-          <Input
-            id={{concat "sidebar-tags-form__input--" tag.name}}
-            class="sidebar-tags-form__input"
-            @type="checkbox"
-            @checked={{includes this.selectedTags tag.name}}
-            {{on "click" (action "toggleTag" tag.name)}}
-          />
-
-          <label
-            class="sidebar-tags-form__tag-label"
-            for={{concat "sidebar-tags-form__input--" tag.name}}
-          >
-            <p>
-              <span class="sidebar-tags-form__tag-label-name">
-                {{tag.name}}
-              </span>
-
-              <span class="sidebar-tags-form__tag-label-count">
-                ({{tag.count}})
-              </span>
-            </p>
-          </label>
-        </div>
-      {{/each}}
+    {{#if this.tagsLoading}}
+      <div class="spinner"></div>
     {{else}}
-      <div class="sidebar-tags-form__no-tags">
-        {{i18n "sidebar.tags_form_modal.no_tags"}}
-      </div>
+      {{#if (gt this.filteredTags.length 0)}}
+        {{#each this.filteredTags as |tag|}}
+          <div class="sidebar-tags-form__tag" data-tag-name={{tag.name}}>
+            <Input
+              id={{concat "sidebar-tags-form__input--" tag.name}}
+              class="sidebar-tags-form__input"
+              @type="checkbox"
+              @checked={{includes this.selectedTags tag.name}}
+              {{on "click" (action "toggleTag" tag.name)}}
+            />
+
+            <label
+              class="sidebar-tags-form__tag-label"
+              for={{concat "sidebar-tags-form__input--" tag.name}}
+            >
+              <p>
+                <span class="sidebar-tags-form__tag-label-name">
+                  {{tag.name}}
+                </span>
+
+                <span class="sidebar-tags-form__tag-label-count">
+                  ({{tag.count}})
+                </span>
+              </p>
+            </label>
+          </div>
+        {{/each}}
+      {{else}}
+        <div class="sidebar-tags-form__no-tags">
+          {{i18n "sidebar.tags_form_modal.no_tags"}}
+        </div>
+      {{/if}}
     {{/if}}
   </form>
 </DModalBody>
