FEATURE: Add deslect all and reset to defaults btn edit nav menu modal (#22218)
What does this change do?

This change adds the deselect all and reset to defaults buttons to the
edit navigation menu tags modal. The deselect all button when
clicked deselects all the selected tags in the modal. If the user
saves with no tags selected, the user's tags section in the
navigation menu will be set to the site's top tags.

The reset to defaults button is only shown when the
`default_navigation_menu_tags` site setting has been configured.
When clicked, the user's tags section in the navigation menu is
automatically set to the tags defined by the
`default_navigation_menu_tags` site setting.

--- a/app/assets/javascripts/discourse/app/components/sidebar/tags-form-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/tags-form-modal.hbs
@@ -1,3 +1,16 @@
+{{#in-element this.modalHeaderAfterTitleElement}}
+  <p class="sidebar-tags-form__deselect">
+    <DButton
+      @class="btn-flat sidebar-tags-form__deselect-all-btn"
+      @label="sidebar.tags_form_modal.subtitle.button_text"
+      @ariaLabel="sidebar.tags_form_modal.subtitle.button_text"
+      @action={{this.deselectAll}}
+    />
+
+    {{i18n "sidebar.tags_form_modal.subtitle.text"}}
+  </p>
+{{/in-element}}
+
 <DModalBody
   @title="sidebar.tags_form_modal.title"
   @class="sidebar-tags-form-modal"
@@ -54,11 +67,22 @@
   </form>
 </DModalBody>
 
-<div class="modal-footer">
+<div class="modal-footer sidebar-tags-form__modal-footer">
   <DButton
     @class="btn-primary sidebar-tags-form__save-button"
     @label="save"
     @disabled={{this.saving}}
     @action={{this.save}}
   />
+
+  {{#if (gt this.siteSettings.default_navigation_menu_tags.length 0)}}
+    <DButton
+      @icon="undo"
+      @class="btn-flat btn-text sidebar-tags-form__reset-to-defaults-btn"
+      @label="sidebar.tags_form_modal.reset_to_defaults"
+      @disabled={{this.saving}}
+      @action={{this.resetToDefaults}}
+    />
+  {{/if}}
+
 </div>
