FEATURE: Export chat messages to CSV file (#22113)
To export chat messages, go to `/admin/plugins/chat` and click the Create export 
button in the _Export chat messages_ section. You'll receive a direct message 
when the export is finished.

Currently, this exports all messages from the last 6 months, but not more than 
10000 messages.

This exports all chat messages, including messages from private channels and 
users' direct conversations. This also exports messages that were deleted.

--- a/app/assets/stylesheets/common/admin/admin_base.scss
+++ b/app/assets/stylesheets/common/admin/admin_base.scss
@@ -411,6 +411,10 @@ $mobile-breakpoint: 700px;
 .admin-container {
   margin-top: 10px;
 
+  .admin-section {
+    margin-bottom: 1em;
+  }
+
   .username {
     input {
       min-width: 15em;
