DEV: Update eslint/prettier (#22226)

--- a/app/assets/javascripts/discourse/app/components/reviewable-item.hbs
+++ b/app/assets/javascripts/discourse/app/components/reviewable-item.hbs
@@ -59,9 +59,7 @@
       </div>
     {{else}}
       {{#component
-        this.reviewableComponent
-        reviewable=this.reviewable
-        tagName=""
+        this.reviewableComponent reviewable=this.reviewable tagName=""
       }}
         <ReviewableScores @reviewable={{this.reviewable}} @tagName="" />
       {{/component}}
