--- a/plugins/chat/assets/javascripts/discourse/components/chat-message-actions-desktop.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message-actions-desktop.hbs
@@ -21,8 +21,7 @@
     >
       {{#if this.shouldRenderFavoriteReactions}}
         {{#each
-          this.messageInteractor.emojiReactions
-          key="emoji"
+          this.messageInteractor.emojiReactions key="emoji"
           as |reaction|
         }}
           <ChatMessageReaction
