--- a/app/assets/javascripts/discourse/app/components/sidebar/tags-form-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/tags-form-modal.hbs
@@ -25,6 +25,7 @@
         @type="text"
         @value={{this.filter}}
         {{on "input" (action "onFilterInput" value="target.value")}}
+        autofocus="true"
       />
     </div>
 
