DEV: Add plugin outlet to latest-topic-list-item component (#22238)
Introduces a new above-latest-topic-list-item-post-count outlet, providing a clean way to add other useful elements to the topic-stats section of the latest-topic-list-item template.

--- a/app/assets/javascripts/discourse/app/components/latest-topic-list-item.hbs
+++ b/app/assets/javascripts/discourse/app/components/latest-topic-list-item.hbs
@@ -26,6 +26,11 @@
   </div>
 </div>
 <div class="topic-stats">
+  <PluginOutlet
+    @name="above-latest-topic-list-item-post-count"
+    @connectorTagName="div"
+    @outletArgs={{hash topic=this.topic}}
+  />
   {{raw "list/posts-count-column" topic=this.topic tagName="div"}}
   <div class="topic-last-activity">
     <a
