FEATURE: Split navigation preference for count and behavior of sidebar links (#22203)
This PR splits up the preference that controls the count vs dot and destination of sidebar links, which is really hard to understand, into 2 simpler checkboxes:

The new preferences/checkboxes are off by default, but there are database migrations to switch the old preference to the new ones so that existing users don't have to update their preferences to keep their preferred behavior of sidebar links when this changed is rolled out.

Internal topic: t/103529.

--- a/app/assets/javascripts/discourse/app/templates/preferences/navigation-menu.hbs
+++ b/app/assets/javascripts/discourse/app/templates/preferences/navigation-menu.hbs
@@ -46,16 +46,20 @@
       "user.experimental_sidebar.navigation_section"
     }}</legend>
 
-  <div class="controls controls-dropdown">
+  <div class="controls">
     <label>{{i18n
-        "user.experimental_sidebar.list_destination_instruction"
+        "user.experimental_sidebar.navigation_section_instruction"
       }}</label>
-    <ComboBox
-      @class="preferences-navigation-menu-navigation__list-destination-selector"
-      @valueProperty="value"
-      @content={{this.sidebarListDestinations}}
-      @value={{this.newSidebarListDestination}}
-      @onChange={{action (mut this.newSidebarListDestination)}}
+
+    <PreferenceCheckbox
+      @labelKey="user.experimental_sidebar.link_to_filtered_list_checkbox_description"
+      @checked={{this.newSidebarLinkToFilteredList}}
+      @class="pref-link-to-filtered-list"
+    />
+    <PreferenceCheckbox
+      @labelKey="user.experimental_sidebar.show_count_new_items_checkbox_description"
+      @checked={{this.newSidebarShowCountOfNewItems}}
+      @class="pref-show-count-new-items"
     />
   </div>
 </div>
