--- a/lib/onebox/templates/twitterstatus.mustache
+++ b/lib/onebox/templates/twitterstatus.mustache
@@ -4,15 +4,15 @@
 
 <div class="tweet">
   <span class="tweet-description">{{{tweet}}}</span>
-  {{#quoted_tweet}}
+  {{#quoted_text}}
     <div class="quoted">
       <a class="quoted-link" href="{{quoted_link}}">
         <p class="quoted-title">{{quoted_full_name}} <span>@{{quoted_screen_name}}</span></p>
       </a>
 
-      <div>{{quoted_tweet}}</div>
+      <div>{{quoted_text}}</div>
     </div>
-  {{/quoted_tweet}}
+  {{/quoted_text}}
 </div>
 
 <div class="date">
