DEV: Update ember-template-lint (#22242)

--- a/app/assets/javascripts/discourse/app/components/d-button.hbs
+++ b/app/assets/javascripts/discourse/app/components/d-button.hbs
@@ -1,4 +1,4 @@
-{{! template-lint-disable no-down-event-binding }}
+{{! template-lint-disable no-pointer-down-event-binding }}
 <button
   {{! For legacy compatibility. Prefer passing class as attributes. }}
   class={{concat-class
