--- a/plugins/chat/assets/javascripts/discourse/components/chat-emoji-picker.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-emoji-picker.hbs
@@ -1,6 +1,6 @@
 {{! template-lint-disable no-invalid-interactive }}
 {{! template-lint-disable no-nested-interactive }}
-{{! template-lint-disable no-down-event-binding }}
+{{! template-lint-disable no-pointer-down-event-binding }}
 
 {{#if (eq this.chatEmojiPickerManager.picker.context @context)}}
   <div
