--- a/app/assets/javascripts/discourse/app/components/emoji-picker.hbs
+++ b/app/assets/javascripts/discourse/app/components/emoji-picker.hbs
@@ -1,10 +1,10 @@
 {{#if this.isActive}}
-  {{! template-lint-disable no-invalid-interactive no-down-event-binding }}
+  {{! template-lint-disable no-invalid-interactive no-pointer-down-event-binding }}
   <div
     {{on "keydown" (action "keydown")}}
     class="emoji-picker {{if this.isActive 'opened'}}"
   >
-    {{! template-lint-enable no-invalid-interactive no-down-event-binding }}
+    {{! template-lint-enable no-invalid-interactive no-pointer-down-event-binding }}
     <div class="emoji-picker-category-buttons">
       {{#if this.recentEmojis.length}}
         <button
