--- a/app/assets/javascripts/discourse/app/components/search-menu/results/types.hbs
+++ b/app/assets/javascripts/discourse/app/components/search-menu/results/types.hbs
@@ -5,7 +5,7 @@
       aria-label={{concat (i18n "search.results") " " resultType.type}}
     >
       {{#each resultType.results as |result|}}
-        {{! template-lint-disable no-down-event-binding }}
+        {{! template-lint-disable no-pointer-down-event-binding }}
         {{! template-lint-disable no-invalid-interactive }}
         <li class="item" {{on "keydown" this.onKeydown}}>
           <a href={{(or result.url result.path)}} class="search-link">
