UX: Fix overridden setting highlight color (#22245)

--- a/app/assets/stylesheets/common/admin/settings.scss
+++ b/app/assets/stylesheets/common/admin/settings.scss
@@ -109,7 +109,7 @@
     }
   }
   .setting.overridden {
-    input {
+    .values input {
       background-color: var(--highlight-bg);
     }
     h3 {
