DEV: Refactor edit tags/categories modal to reduce duplication (#22240)
Why this change?

There was alot of duplication between the edit navigation menu tags/categories modal which
was making it hard to introduce new changes as the work had to be
duplicated into multiple places.

This commit mainly extracts the duplicated code into common components
such that it is easier to make styling changes across both modals.

--- a/app/assets/javascripts/discourse/app/templates/modal/sidebar-categories-form.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/sidebar-categories-form.hbs
@@ -1,1 +1,3 @@
-<Sidebar::CategoriesFormModal @closeModal={{(action "closeModal")}} />
+<Sidebar::EditNavigationModalForm::CategoriesForm
+  @closeModal={{(action "closeModal")}}
+/>
