FEATURE: Add dropdown to filter by selected in edit nav menu modal (#22251)
What does this change do?

This change adds a dropdown filter that allows a user to filter by
selected or unselected categories/tags in the edit navigation menu
modal.

For the categories modal, parent categories that do not match the
dropdown filter will be displayed as disabled since those parent
categories need to be displayed to maintain the hieracy of the child
child categories.

--- a/app/assets/javascripts/discourse/app/components/sidebar/edit-navigation-modal-form/categories-form.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/edit-navigation-modal-form/categories-form.hbs
@@ -12,6 +12,9 @@
     "sidebar.categories_form_modal.filter_placeholder"
   }}
   @onFilterInput={{this.onFilterInput}}
+  @resetFilter={{this.resetFilter}}
+  @filterSelected={{this.filterSelected}}
+  @filterUnselected={{this.filterUnselected}}
 >
   <form class="sidebar-categories-form">
     {{#if (gt this.filteredCategoriesGroupings.length 0)}}
@@ -50,6 +53,9 @@
                   this.selectedSidebarCategoryIds
                   category.id
                 }}
+                disabled={{(not
+                  (includes this.filteredCategoryIds category.id)
+                )}}
                 {{on "click" (action "toggleCategory" category.id)}}
               />
             </div>
