DEV: Add plugin outlet above the navigation in the messages tab in the user profile (#22254)

--- a/app/assets/javascripts/discourse/app/templates/user/messages.hbs
+++ b/app/assets/javascripts/discourse/app/templates/user/messages.hbs
@@ -1,5 +1,10 @@
 <DSection @pageClass="user-messages" />
 
+<PluginOutlet
+  @name="user-messages-above-navigation"
+  @outletArgs={{hash model=this.model}}
+/>
+
 <div class="user-navigation user-navigation-secondary">
   <ol class="category-breadcrumb">
     <li>
