DEV: Added data attributes to identify the user settings in the UI (#22261)
This commit adds data attributes to identify the controls in the user settings UI.

Plugins and TCs can use this information to target each setting to highlight or hide
them.

Although most of the settings also have specific classes identifying them, using data
attributes is more future proof as it is less likely to change them classes, specially
as we increase the adoption of the BEM methodology in CSS.

Using data attributes also are semantically correct as the setting name is data not really related to the classes used.

--- a/app/assets/javascripts/discourse/app/templates/preferences/navigation-menu.hbs
+++ b/app/assets/javascripts/discourse/app/templates/preferences/navigation-menu.hbs
@@ -1,4 +1,7 @@
-<div class="control-group preferences-navigation-menu-categories">
+<div
+  class="control-group preferences-navigation-menu-categories"
+  data-setting-name="user-navigation-menu-categories"
+>
   <legend class="control-label">{{i18n
       "user.experimental_sidebar.categories_section"
     }}</legend>
@@ -20,7 +23,10 @@
 </div>
 
 {{#if this.model.display_sidebar_tags}}
-  <div class="control-group preferences-navigation-menu-tags">
+  <div
+    class="control-group preferences-navigation-menu-tags"
+    data-setting-name="user-navigation-menu-tags"
+  >
     <legend class="control-label">{{i18n
         "user.experimental_sidebar.tags_section"
       }}</legend>
@@ -41,7 +47,10 @@
   </div>
 {{/if}}
 
-<div class="control-group preferences-navigation-menu-navigation">
+<div
+  class="control-group preferences-navigation-menu-navigation"
+  data-setting-name="user-navigation-menu-navigation"
+>
   <legend class="control-label">{{i18n
       "user.experimental_sidebar.navigation_section"
     }}</legend>
