--- a/app/assets/javascripts/discourse/app/templates/preferences/tracking.hbs
+++ b/app/assets/javascripts/discourse/app/templates/preferences/tracking.hbs
@@ -4,7 +4,10 @@
   <label class="control-label">{{i18n "user.topics_settings"}}</label>
 
   <div class="user-preferences_tracking-topics-controls">
-    <div class="controls controls-dropdown">
+    <div
+      class="controls controls-dropdown"
+      data-setting-name="user-new-topic-duration"
+    >
       <label>{{i18n "user.new_topic_duration.label"}}</label>
       <ComboBox
         @class="duration"
@@ -17,7 +20,10 @@
       />
     </div>
 
-    <div class="controls controls-dropdown">
+    <div
+      class="controls controls-dropdown"
+      data-setting-name="user-auto-track-topics"
+    >
       <label>{{i18n "user.auto_track_topics"}}</label>
       <ComboBox
         @valueProperty="value"
@@ -29,7 +35,10 @@
       />
     </div>
 
-    <div class="controls controls-dropdown">
+    <div
+      class="controls controls-dropdown"
+      data-setting-name="user-notification-level-when-replying"
+    >
       <label>{{i18n "user.notification_level_when_replying"}}</label>
       <ComboBox
         @valueProperty="value"
