FEATURE: display commit hash for each plugin on `/admin/plugins` page. (#22176)
It will help to find out the current version of the plugins even without the `docker_manager` plugin.

--- a/app/assets/javascripts/admin/addon/templates/plugins-index.hbs
+++ b/app/assets/javascripts/admin/addon/templates/plugins-index.hbs
@@ -42,7 +42,8 @@
           </td>
           <td class="version">
             <div class="label">{{i18n "admin.plugins.version"}}</div>
-            {{plugin.version}}
+            {{plugin.version}}<br />
+            <PluginCommitHash @plugin={{plugin}} />
           </td>
           <td class="col-enabled">
             <div class="label">{{i18n "admin.plugins.enabled"}}</div>
