FIX: sidebar dot color when chat is off (#22264)

--- a/app/assets/stylesheets/common/base/sidebar-section-link.scss
+++ b/app/assets/stylesheets/common/base/sidebar-section-link.scss
@@ -49,6 +49,15 @@
     .sidebar-section-link-suffix {
       margin-left: 1em;
       font-size: var(--font-down-4);
+      &.icon {
+        &.urgent svg {
+          color: var(--success);
+        }
+
+        &.unread svg {
+          color: var(--tertiary-med-or-tertiary);
+        }
+      }
     }
 
     .sidebar-section-link-content-text {
